-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.1
-
None
-
In examining the source code it looks to me like this affects all platforms.
The documentation for QtGlobal lists a number of functions that actually are not accessible through simply a #include <QtGlobal>. Those omitted are the ones declared in qnumeric.h (qIsFinite(), qIsNan() qIsInf()) and I believe that just adding #include "qnumeric.h" to the end of qglobal.h is all that is needed.