Added #include "qnumeric.h" to qglobal.h

Including qnumeric.h causes QtGlobal to have all of the functions that
the documentation indicates that it brings.

Task-number: QTBUG-36715
Change-Id: Ib08ccc18a85dfe4ecd18ef1dfbfec3e90ab8ec2c
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 8e261ac756132baeb857fb15013cde126ffa22cc https://github.com/qt/qtbase/commit/8e261ac756132baeb857fb15013cde126ffa22cc