src/corelib/global/qglobal.h
@@ -5483,6 +5483,11 @@ include|#
 directive|include
 file|<QtCore/qtypeinfo.h>
 end_include
+begin_include
+include|#
+directive|include
+file|<QtCore/qnumeric.h>
+end_include
 begin_endif
 endif|#
 directive|endif
